# condux

./: .gitignore  Cargo.toml  Makefile  README.md  build-3ds.sh  build-sdl.sh  build-web.sh  build.rs
condux-app/: Cargo.toml
condux-app/src/: main.rs
condux-rust/: Cargo.toml  arm-none-eabi.json  powerpc-unknown-eabi.json
condux-rust/src/: assets.rs  lib.rs  linalg.rs  platform.rs  render.rs
condux-web/: Cargo.toml  index.html  package-lock.json  package.json  webpack.config.js
condux-web/src/: lib.rs
godot/: Editor.tscn  EditorCamera.gd  EditorCourse.gd  FileUtils.gd  TestScene.tscn  project.godot
godot/Course/: Course.gd  CourseArea.gd  CourseRenderer.gd  Spline.gd
godot/Mesh/: WireframeMesh.gd
godot/Vehicle/: Vehicle.gd  Vehicle.tscn  VehicleCamera.gd  VehicleSet.gd  VehicleType.gd  VehicleTypes.gd
godot/Vehicle/Controller/: BaseController.gd  PlayerController.gd
include/: assets.h  bindings.h  callback.h  collision.h  input.h  linalg.h  macros.h  platform.h  render.h  spline.h  state.h  timing.h  types.h  vehicle.h
rust/: Cargo.toml  build-3ds.sh  build-sdl.sh  build.rs
rust/src/: assets.rs  input.rs  linalg.rs  main.rs  octree.rs  render.rs  spline.rs  state.rs  timing.rs  vehicle.rs
scripts/: asset_bundler.py  bezier_export.py  condux_blender_addon.py  run_web.py
shader/: fragment_framebuffer.glsl  vertex.glsl  vertex_framebuffer.glsl
src/: assets.c  assets.rs  collision.c  garage.rs  input.c  lib.rs  linalg.c  linalg.h  linalg.rs  macros.h  main.c  main.rs  mode.rs  octree.rs  platform.h  render.c  render.h  render.rs  spline.c  spline.rs  state.c  state.rs  timing.c  timing.rs  types.h  util.rs  vehicle.c  vehicle.rs
src/mode/: editor.rs  loading.rs  mod.rs  pause.rs  race.rs  title.rs
src/platform/: ctr.c  ctr.rs  gx.c  mod.rs  sdl.c  sdl.rs  web.rs
src/render/: context.rs  font.rs  graph.rs  mesh.rs  mod.rs
src/vehicle/: garage.rs  mod.rs
web/: index.html
