[package]
name = "condux"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.64.0"
gl_generator = "0.14.0"

[target.'cfg(not(target_os = "horizon"))'.dependencies]
sdl2 = "0.35.2"

[target.armv6k-nintendo-3ds.dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
citro3d = { git = "https://github.com/rust3ds/citro3d-rs.git" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs.git" }

[dependencies]
include_dir = "0.7.3"
bitflags = "1.3.2"
