[package]
name = "condux"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[build-dependencies]
gl_generator = "0.14.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.61"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'EventTarget',
    'Gamepad',
    'GamepadButton',
    'GamepadMappingType',
    'HtmlCanvasElement',
    'KeyboardEvent',
    'Navigator',
    'Node',
    'Performance',
    'Window',
]

[target.'cfg(not(any(target_os = "horizon", target_arch = "wasm32")))'.dependencies]
sdl2 = "0.35.2"

[target.armv6k-nintendo-3ds.dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
citro3d = { git = "https://github.com/rust3ds/citro3d-rs.git" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs.git" }

[dependencies]
include_dir = "0.7.3"
bitflags = "1.3.2"
ouroboros = "0.15.6"

[workspace]
members = ['condux-app', 'condux-web']

[profile.release]
lto = true
opt-level = "z"
